test/test_units/test_kclvm/test_types/invalid_test_data/type_annotation/type_annotation_6.k
a: str = "1"
b: int = a as int
